# pza-plugin-std

./: Cargo.toml  README.md  post_build.rs
src/: lib.rs  scpi.rs  serial_port.rs
src/scpi/: device.rs  producer.rs
src/serial_port/: device.rs  model.rs  producer.rs
src/serial_port/device/: data.rs  open.rs
