[package]
name = "pza-plugin-std"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies]

# The panduza core library
panduza-platform-core = { path = "C:/Users/rodriguez.NET/Documents/workspace/50-PROJET/XX-XXXX-PZA/panduza-platform-core", features = [
    "serial",
] }
# panduza-platform-core = { git = "https://github.com/Panduza/panduza-platform-core", tag = "0.1.7" }
# The panduza connectors library
panduza-platform-connectors = { git = "https://github.com/Panduza/panduza-platform-connectors.git" }

# Main async framework for the platform
tokio = { version = "1", features = ["full", "tracing"] }
# Json serialization & deserialization
serde_json = "1.0.114"
# Async trait support
async-trait = "0.1.77"

#
# tokio-serial = "5.4.1"
serial2-tokio = "0.1.13"

# Trace instrumentation at disabled levels will be skipped and will not even be present
# in the resulting binary unless the verbosity level is specified dynamically.
# This level is configured separately for release and debug builds.
tracing = { version = "0.1", features = [
    # "max_level_off",
    # "max_level_error",
    # "max_level_warn",
    # "max_level_info",
    # "max_level_debug",
    "max_level_trace",
    # "release_max_level_off",
    # "release_max_level_error",
    # "release_max_level_warn",
    # "release_max_level_info",
    "release_max_level_debug",
    # "release_max_level_trace"
] }

[build-dependencies]
prost-build = { version = "0.13.1" }

[package.metadata.cargo-post.dependencies]

panduza-platform-core = { git = "https://github.com/Panduza/panduza-platform-core", tag = "0.1.7" }


[features]

# Enable this if you want to build this driver as a dynamic plugin
# 
plugin = []
